Revert "fix for refactoring DocumentUploadClientApi with CaseDocumentClient. … (#502)"
This reverts commit 52eab14c22caa2398868bf623ffef1c9de6540bc.