@@ -2,36 +2,33 @@ package uk.gov.hmcts.reform.iacasedocumentsapi.infrastructure.clients;
 
 import com.google.common.io.ByteStreams;
 import java.io.IOException;
-import java.util.List;
+import java.util.Collections;
 import org.springframework.beans.factory.annotation.Qualifier;
-import org.springframework.context.annotation.ComponentScan;
 import org.springframework.core.io.Resource;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 import uk.gov.hmcts.reform.authorisation.generators.AuthTokenGenerator;
-import uk.gov.hmcts.reform.ccd.document.am.feign.CaseDocumentClient;
-import uk.gov.hmcts.reform.ccd.document.am.model.Classification;
-import uk.gov.hmcts.reform.ccd.document.am.model.UploadResponse;
-import uk.gov.hmcts.reform.ccd.document.am.util.InMemoryMultipartFile;
+import uk.gov.hmcts.reform.document.DocumentUploadClientApi;
+import uk.gov.hmcts.reform.document.domain.UploadResponse;
+import uk.gov.hmcts.reform.document.utils.InMemoryMultipartFile;
 import uk.gov.hmcts.reform.iacasedocumentsapi.domain.UserDetailsProvider;
 import uk.gov.hmcts.reform.iacasedocumentsapi.domain.entities.UserDetails;
 import uk.gov.hmcts.reform.iacasedocumentsapi.domain.entities.ccd.field.Document;
 import uk.gov.hmcts.reform.iacasedocumentsapi.domain.service.DocumentUploader;
 
 @Service
-@ComponentScan("uk.gov.hmcts.reform.ccd.document.am.feign")
 public class DocumentManagementUploader implements DocumentUploader {
 
-    private final CaseDocumentClient caseDocumentClient;
+    private final DocumentUploadClientApi documentUploadClientApi;
     private final AuthTokenGenerator serviceAuthorizationTokenGenerator;
     private final UserDetailsProvider userDetailsProvider;
 
     public DocumentManagementUploader(
-            CaseDocumentClient caseDocumentClient,
+        DocumentUploadClientApi documentUploadClientApi,
         AuthTokenGenerator serviceAuthorizationTokenGenerator,
         @Qualifier("requestUser") UserDetailsProvider userDetailsProvider
     ) {
-        this.caseDocumentClient = caseDocumentClient;
+        this.documentUploadClientApi = documentUploadClientApi;
         this.serviceAuthorizationTokenGenerator = serviceAuthorizationTokenGenerator;
         this.userDetailsProvider = userDetailsProvider;
     }
@@ -43,7 +40,7 @@ public class DocumentManagementUploader implements DocumentUploader {
         final String serviceAuthorizationToken = serviceAuthorizationTokenGenerator.generate();
         final UserDetails userDetails = userDetailsProvider.getUserDetails();
         final String accessToken = userDetails.getAccessToken();
-
+        final String userId = userDetails.getId();
 
         try {
 
@@ -55,20 +52,19 @@ public class DocumentManagementUploader implements DocumentUploader {
             );
 
             UploadResponse uploadResponse =
-                    caseDocumentClient
-                            .uploadDocuments(
-                              accessToken,
-                              serviceAuthorizationToken,
-                              "Asylum",
-                              "IA",
-                              List.of(file),
-                              Classification.PUBLIC
-                            );
+                documentUploadClientApi
+                    .upload(
+                        accessToken,
+                        serviceAuthorizationToken,
+                        userId,
+                        Collections.singletonList(file)
+                    );
 
-            uk.gov.hmcts.reform.ccd.document.am.model.Document uploadedDocument =
-                    uploadResponse
-                            .getDocuments()
-                            .get(0);
+            uk.gov.hmcts.reform.document.domain.Document uploadedDocument =
+                uploadResponse
+                    .getEmbedded()
+                    .getDocuments()
+                    .get(0);
 
             return new Document(
                 uploadedDocument
